# antlr4-cpp-lean-runtime

./: CMakeLists.txt
runtime/: CMakeLists.txt
src/atn/: ATNState.h
